--- a/public/principal.html
+++ b/public/principal.html
@@ -49,10 +49,12 @@
         </div>
     </nav>
     <!-- Carta -->
+    
     <div class="card" id ="carta_mascota"  style="left: 38%; margin: 3%;">
     </div>
     <!-- Botones dislike, superlike, like -->
-    <div class="botones_likes" style="left: 41.7%;">
+    <div id ="Botones_principal">
+    <div class="botones_likes">
         <button id="btn_dislike"type="button" class="btn btn-danger btn-circle btn-xl btn_dislike" title="Siguiente" onclick="siguienteMasc()"><i class="fa fa-times"></i>
         </button>
         <button id="btn_superlike" type="button" class="btn btn-info btn-circle btn-xl btn_superlike" title="Añadir a favoritos" onclick="postFavs()"><i class="fa fa-star"></i>
@@ -60,7 +62,7 @@
         <button id="btn_like" type="button" class="btn btn-success btn-circle btn-xl btn_like" title="Solicitar Adopción" onclick="SolicitarAdopcion()"><i class="fa fa-heart"></i>
         </button>
     </div>
-
+</div>
     <!-- Optional JavaScript -->
     <script src="principal.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
