--- a/public/Configuración.html
+++ b/public/Configuración.html
@@ -152,7 +152,7 @@
                         <div class="input-group"></div>
                         <div class= "input-group-prepend">
                             <span class="input-group-text" id="basic-addon1"> <i class="fas fa-bug"></i></span>
-                            <select class="custom-select" id="Sexo">
+                            <select class="custom-select" id="especie">
                                 <option value="1">Perro</option>
                                 <option value="2">Gato</option>
                                 <option value="3">Ave</option>
@@ -181,16 +181,15 @@
                                 Macho
                             </label>
                         </div>
+                        
                     </div>
                     <div id="modalEliminarUsuario">
                     </div>
-                    <!-- <div class="form-group">
-                        <label for="distancia">Edad</label>
-                        <input type="range" class="form-control-range" id="distancia" name="distancia" value="50" min="1" max="100">
-                        <output for="distancia" onforminput="value = foo.valueAsNumber;"></output>
-                    </div> -->
                     <hr>
                     <div id="ubicacion">
+                    </div>
+                    <div style="float: left;">
+                        <buttontype="button" class="btn btn-success btn-circle" id="btnFiltro" onclick="Filtrar()"><i class="fa fa-check"></i></button>
                     </div>
                 </form>
             </div>
